--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -18,36 +17,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
 
-      - name: Install
-        run: npm ci
+      - run: npm ci
 
+      # 1) Ставим base path на следующий step
+      - name: Set base path
+        run: |
+          REPO_NAME="${{ github.event.repository.name }}"
+          echo "VITE_BASE_PATH=/$REPO_NAME/" >> $GITHUB_ENV
+
+      # 2) Build уже В СЛЕДУЮЩЕМ step (тут env точно подхватится)
       - name: Build
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-        run: |
-          REPO_NAME="${{ github.event.repository.name }}"
-          if [[ "$REPO_NAME" == *.github.io ]]; then
-            echo "VITE_BASE_PATH=/" >> $GITHUB_ENV
-          else
-            echo "VITE_BASE_PATH=/$REPO_NAME/" >> $GITHUB_ENV
-          fi
-          npm run build
+        run: npm run build
 
-      - name: Configure Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - uses: actions/configure-pages@v5
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
 
