--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# macOS
 .DS_Store
-.DS_Store
+
+# env
+.env
+.env.*
+!.env.example
+
+# deps
+node_modules/
+
+# build
+dist/
+.vite/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
